@startuml
title Builder - Ejemplo 4 - Builder moderno sin Director para configuracion HTTP
left to right direction
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #334155
  FontColor #0F172A
}
hide empty members

package "main" #EEF2FF {
  class Main <<cliente>>
}

package "pattern" #ECFDF5 {
  class HttpClientConfig {
    +describe(): String
    +builder(String baseUrl): Builder
  }
  class Builder {
    +timeoutSeconds(int timeoutSeconds): Builder
    +retries(int retries): Builder
    +bearerToken(String token): Builder
    +allowInsecureLocalhost(): Builder
    +build(): HttpClientConfig
  }
}

HttpClientConfig ..> Builder : crea
Builder ..> HttpClientConfig : crea
Main ..> HttpClientConfig : ejecuta

note bottom
La implementacion esta concentrada en src/pattern/PatternImplementation.java.
Main solo instancia y ejecuta el caso de uso.
end note
@enduml
